add login and register basic logic